Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20657

Root CAs are not properly installed when using GUI installer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 0.4.16
    • Wine
    • None

    Description

      When using 1st stage text mode installer, in HKLM\SOFTWARE\Microsoft\SystemCertificates\AuthRoot\Certificates there's a whole bunch of registry keys with various "Blob" values, that appear to be binaries of trusted certificates:

      However, when using the GUI installer, the keys are still there, but all the "Blob" values are just zeros.

      This leads to the problem that ReactOS Applications Manager cannot establish secure connection and download the database, despite having an internet connection.

      Tested build 0.4.17-dev-301-g9127a53.

      Attachments

        Issue Links

          Activity

            People

              xmine64 xmine64
              8787PCsandVMS Werru2955
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: