dll/win32/setupapi/parser.c
@@ -2,7 +2,7 @@
  * INF file parsing
  *
  * Copyright 2002 Alexandre Julliard for CodeWeavers
- *           2005-2006 Hervé Poussineau (hpoussin@reactos.org)
+ *           2005-2006 HervÃ© Poussineau (hpoussin@reactos.org)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -2002,6 +2002,16 @@ BOOL WINAPI SetupGetBinaryField( PINFCONTEXT context, DWORD index, BYTE *buffer,
     field = &file->fields[line->first_field + index];
     for (i = index; i < line->nb_fields; i++, field++)
     {
+#ifdef __REACTOS__ /* The HEX parser from Wine is broken */
+        errno = 0;
+        ULONG value = wcstoul(field->text, NULL, 16);
+        if (value > 255 || errno != 0)
+        {
+            SetLastError( ERROR_INVALID_DATA );
+            return FALSE;
+        }
+        buffer[i - index] = (BYTE)value;
+#else
         const WCHAR *p;
         DWORD value = 0;
         for (p = field->text; *p && isxdigitW(*p); p++)
@@ -2015,6 +2025,7 @@ BOOL WINAPI SetupGetBinaryField( PINFCONTEXT context, DWORD index, BYTE *buffer,
             else value |= (tolowerW(*p) - 'a' + 10);
         }
         buffer[i - index] = value;
+#endif
     }
     if (TRACE_ON(setupapi))
     {
